kubernetes/apps/network/internal/remote-services/services/pihole1.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-pihole1
  namespace: network
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-pihole1
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-pihole1
addressType: IPv4
ports:
  - port: 80
endpoints:
  - addresses:
    - ${SETTINGS_PIHOLE1_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-pihole1
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "pihole"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "PiHole [1]"
    gethomepage.dev/description: "DNS Server"
    gethomepage.dev/href: "http://${SETTINGS_PIHOLE1_IP}/admin"
    gethomepage.dev/group: "Services"
    gethomepage.dev/icon: "pi-hole.png"
    gethomepage.dev/widget.type: "pihole"
    gethomepage.dev/widget.url: http://${SETTINGS_PIHOLE1_IP}:80
    gethomepage.dev/widget.version: "6"
    gethomepage.dev/widget.key: "${quote}${HOMEPAGE_VAR_PIHOLE_TOKEN}${quote}"
    gethomepage.dev/siteMonitor: http://${SETTINGS_PIHOLE1_IP}:80
spec:
  ingressClassName: internal
  rules:
    - host: "pihole1.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-pihole1
              port:
                number: 80
  tls:
    - hosts:
        - "pihole1.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
